# pontos_turisticos

./: db.sqlite3  pyproject.toml
config/: settings.py
pontos_turisticos/atracoes/: admin.py  apps.py  models.py
pontos_turisticos/atracoes/migrations/: 0001_initial.py
pontos_turisticos/avaliacoes/: admin.py  apps.py  models.py
pontos_turisticos/avaliacoes/migrations/: 0001_initial.py
pontos_turisticos/comentarios/: apps.py  models.py
pontos_turisticos/comentarios/migrations/: 0001_initial.py
pontos_turisticos/core/: admin.py  apps.py  models.py
pontos_turisticos/core/migrations/: 0001_initial.py  0002_auto_20180518_1325.py  0003_pontoturistico_atracoes.py  0004_pontoturistico_comentarios.py
tests/: test_pontos_turisticos.py
